# identity

./: .gitignore  Cargo.toml  commitlint.config.js  install.sh  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: commitlint.yaml
.husky/: commit-msg
proto/: users.proto
services/users/: Cargo.toml  build.rs
services/users/src/: authentication_service.rs  main.rs  users.rs  users_service.rs
